# quadratic_equation

./: .gitignore  CMakeLists.txt  README.md
docs/html/: _c_make_c_compiler_id_8c.html  _r_e_a_d_m_e_8md.html  dir_000005_000004.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f942a7a73394fda25d4213a70555b3f8.html  equation__lib_8c.html  equation__lib_8c__incl.dot  equation__lib_8c__incl.md5  equation__lib_8h.html  equation__lib_8h__dep__incl.dot  equation__lib_8h__dep__incl.md5  equation__lib_8h__incl.dot  equation__lib_8h__incl.md5  equation__lib_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  pages.html  solver__quadratic__equation_8c.html  solver__quadratic__equation_8c__incl.dot  solver__quadratic__equation_8c__incl.md5  test__lib_8h.html  test__lib_8h__dep__incl.dot  test__lib_8h__dep__incl.md5  test__lib_8h__incl.dot  test__lib_8h__incl.md5  test__lib_8h_source.html  tests_8c.html  tests_8c__incl.dot  tests_8c__incl.md5  (+3 more)
docs/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_3.js  defines_7.js  files_0.js  files_2.js  files_3.js  (+10 more)
src/: equation_lib.c  equation_lib.h  solver_quadratic_equation.c
tests/: file_tests.txt  test_lib.h  tests.c  tests_from_file.c
